--- a/task/js_tugas6.html
+++ b/task/js_tugas6.html
@@ -63,3 +63,7 @@
     </form>
     </body>
 </html>
+
+<!--
+    link github
+    https://github.com/MXSHOOT/kampus_merdeka/blob/js_tugas6/task/js_tugas6.html -->
